# wc-conduits

./: LICENSE  README.md  conduitwordcount.cabal  notes.md
src/: ConduitWordCount.hs  Main.hs
src/ConduitWordCount/: Internal.hs
test/: ConduitWordCountSpec.hs
