Name:                   conduitwordcount
Version:                0.0.0
Author:                 Chris Schneider <chris@christopher-schneider.com>
Maintainer:             Chris Schneider <chris@christopher-schneider.com>
License:                BSD3
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple

Executable cwc
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , conduitwordcount
                      , optparse-applicative
  main-is:              Main.hs
  default-extensions:
    GeneralizedNewtypeDeriving
    OverloadedStrings

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      ConduitWordCount
  Other-Modules:        ConduitWordCount.Internal
  Build-Depends:        base >= 4 && < 5

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
